Payflow: Change Verify Method for Amex Cards
Currently $0 authorization is only supported for AVS. This changes the
verify method for amex cards to be a $1 auth and void.

Tests failures are unrelated to these changes.

Loaded suite test/remote/gateways/remote_payflow_test
27 tests, 99 assertions, 10 failures, 0 errors, 0 pendings, 0 omissions, 0 notifications
62.963% passed
----------------------------------------------------------------------------------------
0.60 tests/s, 2.18 assertions/s
Loaded suite test/unit/gateways/payflow_test
44 tests, 192 assertions, 0 failures, 0 errors, 0 pendings, 0 omissions, 0 notifications
100% passed

--- a/test/fixtures.yml
+++ b/test/fixtures.yml
@@ -663,7 +663,7 @@ payex:
 # Working credentials, no need to replace
 payflow:
   login: 'spreedlyIntegrations'
-  password: 'y9q)(j7H'
+  password: 'L9DjqEKjXCkU'
   partner: 'PayPal'
 
 payflow_uk:
